# RESTful-Database-Flask-API

./: MANIFEST.in  README.md  README.txt  api.py  app.py  db.py  newdb.py  requirements.txt  server.py  setup.cfg
App/: __main__.py  app.py
scripts/: duplicateAdd.sh  duplicateRemove.sh  invalidRemove.sh  runTests.sh
scripts/tests/: invalidGet.sh
