[metadata]
name = APIProject
version = 1.1.7
author = Charles Andrews Brandon Delap Morgan Martin
author_email = N/A
description = Webserver API written in Flask Python
url = N/A
platform = Windows, Linux, Mac OS
keywords = Flask, Python, Webserver, SQLALCHEMY
classifiers =
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
packages =
include_package_data = True
install_requires =
    pywin32 >= 1.0; platform_system == "Windows"

[options.packages.find]
exclude =
    *.tests
    *.tests.*
    tests.*
    tests

[bdist_wheel]
universal = 1

[bdist_rpm]
release = 1.1.7
group = Pink Flamingos
packager = Charles Andrews <cjan225@g.uky.edu>
requires =
    pywin32 >= 1.0; platform_system == "Windows"

